syntax = "proto3";
option go_package = "yrcf_grpc_case/grpc/setentry/proto/;setentry";

import "response.proto";

package YrcfAgent;

// message for setentry
message SetEntryRequest {
    bool use_mounted_path = 1;
    string path = 2;
    string stripe_size = 3;
    uint32 stripe_count = 4;

    enum Schema {
        MIRROR = 0;
        RAID0 = 1;
        STANDBY = 2;
        EC = 3;
    }
    Schema schema = 5;
    string pool_id = 6;
    bool force_set = 7;
    string ec_blocksize = 9;
}
message SetEntryResponse {
    ResMes result = 1;
}

service SetEntry {
    rpc SetEntry(SetEntryRequest) returns (SetEntryResponse);
}
